--- a/bar_landing_page.html
+++ b/bar_landing_page.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,30 +7,93 @@
     <title>Document</title>
     <style>
         .circle {
-        width: 50px;
-        height: 50px;
-        /* border: red; */
-        background-color: #333;
-        border-radius: 25px;
-      }
+            width: 50px;
+            height: 50px;
+            /* border: red; */
+            background-color: #333;
+            border-radius: 25px;
+        }
+
+        .filterbtn {
+            background-color: #04AA6D;
+            color: white;
+            padding: 16px;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+        }
+
+        .filterbtn:hover,
+        .filterbtn:focus {
+            background-color: #3e8e41;
+        }
+
+        #myInput {
+            box-sizing: border-box;
+            background-image: url('searchicon.png');
+            background-position: 14px 12px;
+            background-repeat: no-repeat;
+            font-size: 16px;
+            padding: 14px 20px 12px 45px;
+            border: none;
+            border-bottom: 1px solid #ddd;
+        }
+
+        #myInput:focus {
+            outline: 3px solid #ddd;
+        }
+
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .filter-content {
+            display: none;
+            position: absolute;
+            background-color: #f6f6f6;
+            min-width: 230px;
+            overflow: auto;
+            border: 1px solid #ddd;
+            z-index: 1;
+        }
+
+        .filter-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        .filter-struct a:hover {
+            background-color: #ddd;
+        }
+
+        .show {
+            display: block;
+        }
     </style>
 </head>
 
 <body>
     <div class="globe">
-        <!-- optional for now but just need to link to a map-->
-    </div>
+        optional for now but just need to link to a map
+     </div>
 
     <div class="menu">
-        <!-- need the menu page to be linked here-->
-    </div>
+         need the menu page to be linked here-->
+    <!-- </div> -->
 
-    <div class="bar-search">
+    <!-- <div class="bar-search">
         <input type="text" placeholder="Search Bars">
         <button type="submit">Submit</i></button>
+    </div>
+
+    <div class="filter-struct">
         <div class="filter">
-            <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-            <!-- <input id="myInput" onkeyup="filterFunction()"> -->
+        <button onclick="myFunction()" class="filterbtn">filter</button>
+        <div id="myDropdown" class="filter-content">
+            <input id="myInput" onkeyup="filterFunction()">
             <a>atmosphere</a>
             <a>music</a>
             <a>drinks</a>
@@ -53,30 +116,281 @@
         <div>bar 5</div><br>
         <div>bar 6</div><br>
         <div>bar 7</div><br>
-    </div>
+    </div> -->
 
-</body>
 <!-- </body> -->
-<script>
-    // function myFunction() {
-    //     document.getElementById("myDropdown").classList.toggle("show");
-    // }
+<!-- </body> -->
+<!-- <script> -->
+   <!-- // function myFunction() {
+        document.getElementById("myDropdown").classList.toggle("show");
+    }
 
     // function filterFunction() {
-    //     var input, filter, ul, li, a, i;
-    //     input = document.getElementById("myInput");
-    //     filter = input.value.toUpperCase();
-    //     div = document.getElementById("myDropdown");
-    //     a = div.getElementsByTagName("a");
-    //     for (i = 0; i < a.length; i++) {
-    //         txtValue = a[i].textContent || a[i].innerText;
+    //     // const input = document.getElementById("myInput");
+    //     // const filter = input.value.toUpperCase();
+    //     const div = document.getElementById("myDropdown");
+    //     const a = div.getElementsByTagName("a");
+    //     for (let i = 0; i < a.length; i++) {
+    //         ///txtValue = a[i].textContent || a[i].innerText;
     //         if (txtValue.toUpperCase().indexOf(filter) > -1) {
     //             a[i].style.display = "";
     //         } else {
     //             a[i].style.display = "none";
     //         }
     //     }
-    // }
+    // } -->
+<!-- </script> -->
+
+<!-- </html>  -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bar Finder</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        .container {
+            width: 80%;
+            margin: auto;
+            padding: 20px;
+        }
+
+        header {
+            text-align: center;
+        }
+
+        .search-bar {
+            margin-bottom: 20px;
+            position: relative;
+        }
+
+        #search-input {
+            width: 60%;
+            padding: 10px;
+            font-size: 16px;
+        }
+
+        #search-button,
+        #filter-button {
+            padding: 10px;
+            font-size: 16px;
+            margin-left: 10px;
+            cursor: pointer;
+        }
+
+        .filter-container {
+            position: relative;
+            display: inline-block;
+        }
+
+        .filter-menu {
+            display: none;
+            position: absolute;
+            background-color: #fff;
+            border: 1px solid #ddd;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 10px;
+            top: 100%;
+            left: 0;
+            z-index: 1000;
+            width: 250px;
+        }
+
+        .filter-menu label {
+            display: block;
+            margin-bottom: 10px;
+        }
+
+        .filter-values {
+            display: none;
+            margin-top: 10px;
+        }
+
+        .filter-values label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        .bar-list {
+            max-height: 500px;
+            overflow-y: auto;
+        }
+
+        .bar-item {
+            background-color: #fff;
+            margin-bottom: 10px;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .bar-item h2 {
+            margin: 0;
+            font-size: 20px;
+        }
+
+        .bar-item p {
+            margin: 5px 0;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <header>
+            <h1>Over Drinks</h1>
+            <div class="search-bar">
+                <input type="text" id="search-input" placeholder="Search Bars...">
+                <button id="search-button">Search</button>
+                <div class="filter-container">
+                    <button id="filter-button">Filter</button>
+                    <div id="filter-menu" class="filter-menu">
+                        <!-- <label for="filter-options">Filter by: -->
+                        <select id="filter-options">
+                            <option value="">Filter by:</option>
+                            <option value="atmosphere">Atmosphere</option>
+                            <option value="music">Music</option>
+                            <option value="drinks">Drinks</option>
+                            <option value="people">People</option>
+                        </select>
+                        <!-- </label> -->
+                        <div id="filter-values" class="filter-values">
+                            <!-- Filter values will be dynamically inserted here -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <section class="bar-list" id="bar-list">
+            <!-- List of bars will be dynamically inserted here -->
+        </section>
+    </div>
+    <script src="script.js"></script>
+</body>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const bars = [
+            { pplCount : '45', name: 'Bar 1', logo: "pic"},
+            //atmosphere: 'Casual', music: 'Jazz', drinks: 'Cocktails', people: 'Friends' },
+            { pplCount : '100', name: 'Bar 2', logo: "pic"},
+            //atmosphere: 'Elegant', music: 'Rock', drinks: 'Beer', people: 'Singles' },
+            { pplCount : '20', name: 'Bar 3', logo: "pic"},
+            //atmosphere: 'Lively', music: 'Pop', drinks: 'Wine', people: 'Groups' },
+            { pplCount : '13', name: 'Bar 4', logo: "pic"},
+            // atmosphere: 'Relaxed', music: 'Acoustic', drinks: 'Whiskey', people: 'Couples' },
+            // Add more bars as needed
+            { pplCount : '2', name: 'Bar 5', logo: "pic"},
+            //atmosphere: 'Casual', music: 'Jazz', drinks: 'Cocktails', people: 'Friends' },
+            { pplCount : '17', name: 'Bar 6', logo: "pic"},
+            //atmosphere: 'Elegant', music: 'Rock', drinks: 'Beer', people: 'Singles' },
+            { pplCount : '165', name: 'Bar 7', logo: "pic"},
+            //atmosphere: 'Lively', music: 'Pop', drinks: 'Wine', people: 'Groups' },
+            { pplCount : '55', name: 'Bar 8', logo: "pic"},
+            //atmosphere: 'Relaxed', music: 'Acoustic', drinks: 'Whiskey', people: 'Couples' },
+            { pplCount : '1', name: 'Bar 9', logo: "pic"},
+            //atmosphere: 'Casual', music: 'Jazz', drinks: 'Cocktails', people: 'Friends' },
+            { pplCount : '0',name: 'Bar 10', logo: "pic"},
+            //atmosphere: 'Elegant', music: 'Rock', drinks: 'Beer', people: 'Singles' },
+        ];
+
+        const barList = document.getElementById('bar-list');
+        const searchInput = document.getElementById('search-input');
+        const searchButton = document.getElementById('search-button');
+        const filterButton = document.getElementById('filter-button');
+        const filterMenu = document.getElementById('filter-menu');
+        const filterOptions = document.getElementById('filter-options');
+        const filterValues = document.getElementById('filter-values');
+
+        const filters = {
+            atmosphere: ['Casual', 'Elegant', 'Lively', 'Relaxed'],
+            music: ['Jazz', 'Rock', 'Pop', 'Acoustic'],
+            drinks: ['Cocktails', 'Beer', 'Wine', 'Whiskey'],
+            people: ['Friends', 'Singles', 'Groups', 'Couples'],
+            logo: ['pic'],
+            pplCount: ['45', '100', '20', '13', '2', '17', '165', '55', '1', '0']
+        };
+
+        function displayBars(barsToDisplay) {
+            barList.innerHTML = '';
+            barsToDisplay.forEach(bar => {
+                const barItem = document.createElement('div');
+                barItem.className = 'bar-item';
+                barItem.innerHTML = `
+                <h2>${bar.name}</h2>
+                <p><strong>pplCount:</strong> ${bar.pplCount}</p>
+                <p><strong>logo:</strong> ${bar.logo}</p>
+                
+            `;
+                barList.appendChild(barItem);
+            });
+        }
+
+        //bro for func above
+        //<p><strong>Atmosphere:</strong> ${bar.atmosphere}</p>
+        // <p><strong>Music:</strong> ${bar.music}</p>
+        //         <p><strong>Drinks:</strong> ${bar.drinks}</p>
+        //         <p><strong>People:</strong> ${bar.people}</p>
+
+        function filterBars() {
+            const selectedOption = filterOptions.value;
+            const selectedValue = filterValues.querySelector('select')?.value;
+
+            const filteredBars = bars.filter(bar => {
+                return !selectedOption || !selectedValue || bar[selectedOption] === selectedValue;
+            });
+            displayBars(filteredBars);
+        }
+
+        function populateFilterValues(option) {
+            const values = filters[option] || [];
+            filterValues.innerHTML = `
+            <label for="filter-value">Select ${option}:
+                <select id="filter-value">
+                    <option value="">All</option>
+                    ${values.map(value => `<option value="${value}">${value}</option>`).join('')}
+                </select>
+            </label>
+        `;
+            filterValues.style.display = 'block';
+        }
+
+        searchButton.addEventListener('click', () => {
+            const query = searchInput.value.toLowerCase();
+            const filteredBars = bars.filter(bar => bar.name.toLowerCase().includes(query));
+            displayBars(filteredBars);
+        });
+
+        filterButton.addEventListener('click', () => {
+            filterMenu.style.display = filterMenu.style.display === 'block' ? 'none' : 'block';
+        });
+
+        filterOptions.addEventListener('change', (event) => {
+            const selectedOption = event.target.value;
+            populateFilterValues(selectedOption);
+        });
+
+        filterValues.addEventListener('change', filterBars);
+
+        document.addEventListener('click', (event) => {
+            if (!filterButton.contains(event.target) && !filterMenu.contains(event.target)) {
+                filterMenu.style.display = 'none';
+            }
+        });
+
+        // Display all bars on initial load
+        displayBars(bars);
+    });
 </script>
 
 </html>
