--- a/UserList.html
+++ b/UserList.html
@@ -210,11 +210,11 @@
         <div class="title">List of Users</div>
         <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
         <div class="menu-content" id="menuContent">
-            <a href="home.html">Home</a>
+            <a href="bar_landing_page.html">Home</a>
             <a href="profile.html">Profile</a>
             <a href="settings.html">Settings</a>
             <a href="mission.html">Mission</a>
-            <a href="QA.html">QA</a>
+            <a href="faq.html">FAQs</a>
         </div>
     </div>
 
