--- a/settings.html
+++ b/settings.html
@@ -133,7 +133,7 @@
         <h1 id="pageTitle">Settings</h1>
         <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
         <div class="menu-content" id="menuContent">
-            <a href="home.html">Home</a>
+            <a href="bar_landing_page.html">Home</a>
             <a href="profile.html">Profile</a>
             <a href="settings.html">Settings</a>
             <a href="faq.html">FAQs</a>
