--- a/LoginScreen2.html
+++ b/LoginScreen2.html
@@ -48,7 +48,7 @@
     <script>
         document.getElementById('loginForm').addEventListener('submit', function(event) {
             event.preventDefault();
-            window.location.href = 'profile.html';
+            window.location.href = 'bar_landing_page.html';
         });
     </script>
 </body>
